<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/colorPrimary50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            style="@style/MyCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:clipToPadding="false">


                <Spinner
                    android:id="@+id/id_spinner_packs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Spinner.DropDown"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:background="@drawable/spinner_border"
                    android:popupBackground="@drawable/spinner_dropdown_border"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="6dp"
                    android:clipToPadding="false">

                    <Button
                        android:id="@+id/id_btn_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:textSize="14sp"
                        android:text="@string/btn_remove"
                        android:layout_gravity="end"
                        android:onClick="removePack"
                        android:background="@android:color/transparent"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:textSize="14sp"
                        android:text="@string/btn_add"
                        android:layout_gravity="end"
                        android:onClick="createNewPack"
                        android:background="@drawable/btn_background"
                        android:stateListAnimator="@null"
                        android:elevation="4dp"/>

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/MyCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_card_view_settings"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:clipToPadding="false">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_pack_title"
                    android:textSize="20sp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/config_pack_name_hint"
                    android:id="@+id/id_config_pack_name"
                    android:maxLines="1"
                    android:inputType="text"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/config_pack_time_hint"
                    android:id="@+id/id_config_pack_time"
                    android:focusable="false"
                    android:longClickable="false"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="6dp"
                    android:clipToPadding="false">

                    <Button
                        android:id="@+id/id_btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:textSize="14sp"
                        android:text="@string/btn_cancel"
                        android:layout_gravity="end"
                        android:background="@android:color/transparent"
                        android:onClick="cancelNewPack"/>

                    <Button
                        android:id="@+id/id_btn_confirm_new_pack"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:textSize="14sp"
                        android:text="@string/btn_confirm"
                        android:layout_gravity="end"
                        android:background="@drawable/btn_background"
                        android:stateListAnimator="@null"
                        android:elevation="4dp"/>

                </LinearLayout>



            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/MyCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/id_linear_layout_pills"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/id_linear_layout_week"
                    android:paddingBottom="4dp"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/MyCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:clipToPadding="false">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/notification_time_hint"
                        android:focusable="false"
                        android:longClickable="false"
                        android:textAlignment="center"
                        android:id="@+id/id_notification_time"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_notification_switch"
                        android:layout_weight="1"
                        />



                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</ScrollView>